--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -8,6 +8,12 @@
     <meta name="description" content="">
 
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+    </style>
     @Styles.Render("~/bundles/css")
       <script type="application/javascript" src="/assets/js/add2home.js"></script>
   </head>
