--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HotelOrTaxi</title>
+    <title>Hotel Vs Taxi!</title>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="description" content="">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">Hotel or Taxi</a>
+          <a class="brand" href="/">Hotel Vs Taxi</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -43,7 +43,7 @@
         @RenderBody()
 
         <footer>
-            <p>&copy; Hotel or Taxi @DateTime.Now.Year</p>
+            <p>&copy; Hotel Vs Taxi @DateTime.Now.Year</p>
         </footer>
 
     </div>
