--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="hero-unit">
-    <h1>Hotel Vs Taxi!</h1>
+    <h1>Hotel vs Taxi!</h1>
 ﻿       <p>It's all happened to us. You drive to work, end up in the pub, can't resist the beer and you're in that awful dilemma... You can't drive, so time to call a cab. But wait! Could it be cheaper to stay in a local hotel?! Here's a handy site to help you decide:</p>
     
         <h2>Should I stay or should I go? </h2>
