--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -1,6 +1,30 @@
 ﻿<div class="hero-unit">
     <h1>Hotel vs Taxi!</h1>
-﻿       <p>It's all happened to us. You drive to work, end up in the pub, can't resist the beer and you're in that awful dilemma... You can't drive, so time to call a cab. But wait! Could it be cheaper to stay in a local hotel?! Here's a handy site to help you decide:</p>
+    <p>It's all happened to us. You drive to work, end up in the pub, can't resist the beer and you're in that awful dilemma... You can't drive, so time to call a cab. But wait! Could it be cheaper to stay in a local hotel?! Here's a handy site to help you decide:</p>
     
-        <h2>Should I stay or should I go? </h2>
+    <h2>Should I stay or should I go? </h2>
+    
+    <form class="form-horizontal" method="GET" action="results">
+        <div class="row">
+            <div class="span5">
+                <div class="control-group">
+                    <input type="text" id="inputEmail" placeholder="From" class="input-block-level" name="From">
+                </div>
+            </div>
+            <div class="span5">
+                <div class="control-group">
+                    <input type="text" id="inputEmail" placeholder="To" class="input-block-level" name="To">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="span12">
+                <div class="control-group">
+                    <button type="submit" class="btn">Go</button>
+                </div>
+            </div>
+        </div>
+    </form>
+
 </div>
+
