added autocomplete to both fields

--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -8,12 +8,12 @@
         <div class="row">
             <div class="span5">
                 <div class="control-group">
-                    <input type="text" id="inputEmail" placeholder="From" class="input-block-level" name="From">
+                    <input type="text" id="from" placeholder="From" class="input-block-level" name="From">
                 </div>
             </div>
             <div class="span5">
                 <div class="control-group">
-                    <input type="text" id="inputEmail" placeholder="To" class="input-block-level" name="To">
+                    <input type="text" id="to" placeholder="To" class="input-block-level" name="To">
                 </div>
             </div>
         </div>
@@ -24,6 +24,8 @@
                 </div>
             </div>
         </div>
+        <input type="hidden" id="fromlatlong" name="fromlatlong"/>
+        <input type="hidden" id="tolatlong" name="tolatlong"/>
     </form>
 
 </div>
