putting together a quick results page

--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -1,1 +1,11 @@
-﻿
+﻿<div class="hero-unit">
+    <h1>Results</h1>
+    <h2>Should I stay or should I go? </h2>
+    <h3>Taxi</h3>
+    <p>£26</p>
+
+    <h3>Hotel</h3>
+    <p>£30</p>
+
+</div>
+
