got a uri for the hotel results to take you to mobil

--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -5,13 +5,13 @@
     <form>
         <h3>Taxi</h3>
         <p>£26</p>
-        @Html.ActionLink("Call", "Index", "Taxi")
+        @Html.ActionLink("Show me", "Index", "Taxi")
     </form>
 
     <form>
         <h3>Hotel</h3>
         <p>£30</p>
-        <button type="submit" class="btn">Show me</button>
+        <a href ="http://m.laterooms.com/en/p9827/MobileSearch.aspx?k=Manchester&d=20130404&n=1&adults=1&children=0&minp=&maxp=&StarRatingFilter=&rt=1-0&Latitude=&Longitude=&MaxRadius=1&PageSize=10&toStep=&SortBy=Price&Ascending=True&findButton=FIND+HOTELS">Show me</a>
     </form>
 </div>
 
