--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -11,7 +11,7 @@
     <form>
         <h3>Hotel</h3>
         <p>£30</p>
-        <a href ="http://m.laterooms.com/en/p9827/MobileSearch.aspx?k=Manchester&d=20130404&n=1&adults=1&children=0&minp=&maxp=&StarRatingFilter=&rt=1-0&Latitude=&Longitude=&MaxRadius=1&PageSize=10&toStep=&SortBy=Price&Ascending=True&findButton=FIND+HOTELS">Show me</a>
+        <a href ="http://m.laterooms.com/en/p9827/MobileSearch.aspx?k=Manchester&d=20130404&n=1&adults=1&children=0&minp=&maxp=&rt=1-0&Latitude=&Longitude=&MaxRadius=1&sb=tp&sd=true">Show me</a>
     </form>
 </div>
 
