--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -1,8 +1,4 @@
 ﻿<div class="hero-unit">
-    <h1>Hotel vs Taxi!</h1>
-    <p>It's all happened to us. You drive to work, end up in the pub, can't resist the beer and you're in that awful dilemma... You can't drive, so time to call a cab. But wait! Could it be cheaper to stay in a local hotel?! Here's a handy site to help you decide:</p>
-    
-    <h2>Should I stay or should I go? </h2>
     
     <form class="form-horizontal" method="GET" action="results">
         <div class="row">
@@ -20,7 +16,7 @@
         <div class="row">
             <div class="span12">
                 <div class="control-group">
-                    <button type="submit" class="btn">Go</button>
+                    <button type="submit" class="btn-fight">Go</button>
                 </div>
             </div>
         </div>
@@ -30,3 +26,5 @@
 
 </div>
 
+<h1>Hotel vs Taxi!</h1>
+<p>It's all happened to us. You drive to work, end up in the pub, can't resist the beer and you're in that awful dilemma... You can't drive, so time to call a cab. But wait! Could it be cheaper to stay in a local hotel?! Here's a handy site to help you decide:</p>
