--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="span12">
                 <div class="control-group">
-                    <button type="submit" class="btn-fight">Go</button>
+                    <button type="submit" class="btn-fight"></button>
                 </div>
             </div>
         </div>
