Moving stuff around

--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -6,13 +6,13 @@
 <p>
     @Model.Winner.Name
     @Model.Winner.Price
-    <a href ="@Model.Winner.Uri">Show me</a></h3>
+    <a href="@Model.Winner.Uri">Show me</a>
 </p>
 
 <p>
     @Model.Loser.Name
     @Model.Loser.Price
-    <a href ="@Model.Loser.Uri">Show me</a></h3>
+    <a href="@Model.Loser.Uri">Show me</a>
 </p>
 </div>
 
