--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="span5">
                 <div class="control-group">
-                    <input type="text" id="from" placeholder="From" class="input-block-level" name="From">
+                    <input type="text" id="from" placeholder="From" class="input-block-level" name="From" value="Current location">
                 </div>
             </div>
             <div class="span5">
