--- a/HotelOrTaxi/assets/css/style.css
+++ b/HotelOrTaxi/assets/css/style.css
@@ -3,6 +3,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+    background-color: #F3EdE0;
 }
 
 .hero-unit {
@@ -14,6 +15,10 @@ padding: 20px;
     background-image: linear-gradient(to bottom, #CF0000, #FF0000);
     background-repeat: repeat-x;
     border-color: RED;
+}
+
+.navbar-inverse .brand {
+color: #FFFFFF;
 }
 
 .navbar-inner {
