--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="/">Hotel vs Taxi!</a>
+          <a class="brand" href="/"><img src="/assets/img/logo.png" alt="Hotel vs Taxis" /></a>
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
