--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -5,13 +5,13 @@
 <h2>Should I stay or should I go? </h2>
 <p>
     @Model.Winner.Name
-    @Model.Winner.Price
+    £@Model.Winner.Price
     <a href="@Model.Winner.Uri">Show me</a>
 </p>
 
 <p>
     @Model.Loser.Name
-    @Model.Loser.Price
+    £@Model.Loser.Price
     <a href="@Model.Loser.Uri">Show me</a>
 </p>
 </div>
