--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <meta name="description" content="">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
     <link href="/assets/css/bootstrap.css" rel="stylesheet">
+    <link rel="apple-touch-icon" href="/assets/img/icon-app.png"/>
+    <link rel="apple-touch-startup-image" href="/assets/img/startscreen.png" />
     <style type="text/css">
       body {
         padding-top: 60px;
