add to home screen button

--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
       }
     </style>
     @Styles.Render("~/bundles/css")
-      
+    
+    <script type="text/javascript" src="/assets/js/add2home.js"></script>
     <script type="text/javascript">
 
         function stopRKey(evt) {
