bit of tidying up and prep for tomorrow with the taxi list

--- a/HotelOrTaxi/Views/Taxi/Index.cshtml
+++ b/HotelOrTaxi/Views/Taxi/Index.cshtml
@@ -1,12 +1,17 @@
 ﻿@model HotelOrTaxi.Models.TaxisViewModel
 
 <h2>Taxi firms near you</h2>
-<a href="">Olympic Taxis</a>
-<a href="tel:01618480963">(0161) 848 0963</a> - 2A Seymour Grove, M16 0LH Manchester
-Get Directions
-Mantax Taxis Ltd
-<a href="tel:0161230 3333">(0161) 230 3333</a> - 1 Corbett Street, M11 4BD Manchester
-Get Directions
-Taxi Centre
-<a href="tel:0161 834 8896">(0161) 834 8896</a> - Arch 8 Corporation Street, M4 4DG Manchester
-Get Directions
+<p>
+    We provide you with an average price for a taxi in the district of where you want picking up.
+    http://yourtaximeter.com/main/council/manchester-district-b
+</p>
+<p>Olympic Taxis
+    <a href="tel:01618480963">(0161) 848 0963</a> - 2A Seymour Grove, M16 0LH Manchester
+    Mantax Taxis Ltd
+</p>
+<p><a href="tel:0161230 3333">(0161) 230 3333</a> - 1 Corbett Street, M11 4BD Manchester
+</p>
+<p>
+    Taxi Centre
+    <a href="tel:0161 834 8896">(0161) 834 8896</a> - Arch 8 Corporation Street, M4 4DG Manchester
+</p>
