--- a/HotelOrTaxi/Views/Taxi/Index.cshtml
+++ b/HotelOrTaxi/Views/Taxi/Index.cshtml
@@ -2,16 +2,14 @@
 
 <h2>Taxi firms near you</h2>
 <p>
-    We provide you with an average price for a taxi in the district of where you want picking up.
-    http://yourtaximeter.com/main/council/manchester-district-b
+    We provide you with an <a href="http://yourtaximeter.com/main/council/manchester-district-b">average price</a> for a taxi in the district of where you want picking up.
+    
 </p>
-<p>Olympic Taxis
-    <a href="tel:01618480963">(0161) 848 0963</a> - 2A Seymour Grove, M16 0LH Manchester
-    Mantax Taxis Ltd
+<p>Olympic Taxis <a href="tel:01618480963">(0161) 848 0963</a> - 2A Seymour Grove, M16 0LH Manchester
+    
 </p>
-<p><a href="tel:0161230 3333">(0161) 230 3333</a> - 1 Corbett Street, M11 4BD Manchester
+<p>Mantax Taxis Ltd <a href="tel:0161230 3333">(0161) 230 3333</a> - 1 Corbett Street, M11 4BD Manchester
 </p>
 <p>
-    Taxi Centre
-    <a href="tel:0161 834 8896">(0161) 834 8896</a> - Arch 8 Corporation Street, M4 4DG Manchester
+    Taxi Centre <a href="tel:0161 834 8896">(0161) 834 8896</a> - Arch 8 Corporation Street, M4 4DG Manchester
 </p>
