--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
         @RenderBody()
 
         <footer>
-            <p>&copy; Hotel Vs Taxi @DateTime.Now.Year</p>
+            <p style="line-height:60px; font-weight:700; height:0px; border-top:1px dotted #999999; color:#999999; text-align:center;">&copy; Hotel Vs Taxi @DateTime.Now.Year</p>
         </footer>
 
     </div>
