now with awesome fight gif, js loaded search results

--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="hero-unit">
     
-    <form class="form-horizontal" method="GET" action="results">
+    <form class="form-horizontal" method="GET" action="fight">
         <div class="row">
             <div class="span5">
                 <div class="control-group">
