--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -1,19 +1,32 @@
 ﻿@model HotelOrTaxi.Models.ResultsViewModel
 
 <div class="container search-results">
-    <div class="hero-unit">
-    <h1>Results</h1>
-    <h2>Should I stay or should I go? </h2>
-    <p>
-        @Model.Winner.Name
-        £@Model.Winner.Price
-        <a href="@Model.Winner.Uri">Show me</a>
-    </p>
-
-    <p>
-        @Model.Loser.Name
-        £@Model.Loser.Price
-        <a href="@Model.Loser.Uri">Show me</a>
-    </p>
+    
+    @if (Model.Winner.Name == "Hotel")
+    {
+        <div id="result-info">
+            <span>Hotel is &pound;@string.Format("{0:0.00}", (double) Model.PriceDifference) cheaper</span><br/>So now you can stay – result!<div class="arrow-down"></div>
+        </div>
+    }
+    <div class="results-box">
+        <img src="/assets/img/@Model.Winner.Name.ToLower()-wins-icon.png" width="118" height="111" alt="" />
+        <span class="subheadline">Avg price</span>
+        <span class="price">&pound; @string.Format("{0:0.00}", (double) Model.Winner.Price)</span>
+        <a href="@Model.Winner.Uri" class="red-button">Show me</a>
+    </div>
+    <div class="separator"></div>
+    
+    @if (Model.Loser.Name == "Hotel")
+    {
+        <div id="result-info">
+            <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
+            <div class="arrow-down"></div>
+        </div>
+    }
+    <div class="results-box">
+        <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
+        <span class="subheadline">Avg price</span>
+        <span class="price grey">&pound; @string.Format("{0:0.00}", (double) Model.Loser.Price)</span>
+        <a href="@Model.Loser.Uri" class="red-button">Show me</a>
     </div>
 </div>
