--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -1,32 +1,45 @@
 ﻿@model HotelOrTaxi.Models.ResultsViewModel
 
-<div class="container search-results">
-    
-    @if (Model.Winner.Name == "Hotel")
-    {
-        <div id="result-info">
-            <span>Hotel is &pound;@string.Format("{0:0.00}", (double) Model.PriceDifference) cheaper</span><br/>So now you can stay – result!<div class="arrow-down"></div>
-        </div>
-    }
-    <div class="results-box">
-        <img src="/assets/img/@Model.Winner.Name.ToLower()-wins-icon.png" width="118" height="111" alt="" />
-        <span class="subheadline">Avg price</span>
-        <span class="price">&pound; @string.Format("{0:0.00}", (double) Model.Winner.Price)</span>
-        <a href="@Model.Winner.Uri" class="red-button">Show me</a>
+@if (Model.HasErrors)
+{
+    <div class="container search-results">
+        <h1>Whoops!</h1>
+        <p>
+            The fight got a bit messy and we have no clear winner.
+            <br/>
+            @Model.Error
+        </p>
     </div>
-    <div class="separator"></div>
-    
-    @if (Model.Loser.Name == "Hotel")
-    {
-        <div id="result-info">
-            <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
-            <div class="arrow-down"></div>
+}
+else
+{
+    <div class="container search-results">
+        @if (Model.Winner.Name == "Hotel")
+        {
+            <div id="result-info">
+                <span>Hotel is &pound;@string.Format("{0:0.00}", (double) Model.PriceDifference) cheaper</span><br/>So now you can stay – result!<div class="arrow-down"></div>
+            </div>
+        }
+        <div class="results-box">
+            <img src="/assets/img/@Model.Winner.Name.ToLower()-wins-icon.png" width="118" height="111" alt="" />
+            <span class="subheadline">Avg price</span>
+            <span class="price">&pound; @string.Format("{0:0.00}", (double) Model.Winner.Price)</span>
+            <a href="@Model.Winner.Uri" class="red-button">Show me</a>
         </div>
-    }
-    <div class="results-box">
-        <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
-        <span class="subheadline">Avg price</span>
-        <span class="price grey">&pound; @string.Format("{0:0.00}", (double) Model.Loser.Price)</span>
-        <a href="@Model.Loser.Uri" class="red-button">Show me</a>
+        <div class="separator"></div>
+    
+        @if (Model.Loser.Name == "Hotel")
+        {
+            <div id="result-info">
+                <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
+                <div class="arrow-down"></div>
+            </div>
+        }
+        <div class="results-box">
+            <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
+            <span class="subheadline">Avg price</span>
+            <span class="price grey">&pound; @string.Format("{0:0.00}", (double) Model.Loser.Price)</span>
+            <a href="@Model.Loser.Uri" class="red-button">Show me</a>
+        </div>
     </div>
-</div>
+}
