--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
       }
     </style>
     @Styles.Render("~/bundles/css")
-    
+    @RenderSection("styles", required: false)
     <script type="text/javascript" src="/assets/js/add2home.js"></script>
     <script type="text/javascript">
 
