--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model HotelOrTaxi.Models.ResultsViewModel
+﻿@using Results
+@model HotelOrTaxi.Models.ResultsViewModel
 
 @if (Model.HasErrors)
 {
@@ -14,7 +15,7 @@
 else
 {
     <div class="container search-results">
-        @if (Model.Winner.Name == "Hotel")
+        @if (Model.Winner.Name == "Hotel" && Model.PriceDifference > 0)
         {
             <div id="result-info">
                 <span>Hotel is &pound;@string.Format("{0:0.00}", (double) Model.PriceDifference) cheaper</span><br/>So now you can stay – result!<div class="arrow-down"></div>
@@ -27,19 +28,24 @@ else
             <a href="@Model.Winner.Uri" class="red-button">Show me</a>
         </div>
         <div class="separator"></div>
-    
-        @if (Model.Loser.Name == "Hotel")
+        
+        @if (Model.Loser != null)
         {
-            <div id="result-info">
-                <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
-                <div class="arrow-down"></div>
+            if (Model.Loser.Name == "Hotel" && Model.PriceDifference < 50)
+             {
+                 <div id="result-info">
+                     <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
+                     <div class="arrow-down"></div>
+                 </div>
+             }
+            <div class="results-box">
+                <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
+                <span class="subheadline">Avg price</span>
+                <span class="price grey">&pound; @string.Format("{0:0.00}", (double) Model.Loser.Price)</span>
+                <a href="@Model.Loser.Uri" class="red-button">Show me</a>
             </div>
         }
-        <div class="results-box">
-            <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
-            <span class="subheadline">Avg price</span>
-            <span class="price grey">&pound; @string.Format("{0:0.00}", (double) Model.Loser.Price)</span>
-            <a href="@Model.Loser.Uri" class="red-button">Show me</a>
-        </div>
+        
+        <p>There was no taxi route found.</p>
     </div>
 }
