--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -32,12 +32,12 @@ else
         @if (Model.Loser != null)
         {
             if (Model.Loser.Name == "Hotel" && Model.PriceDifference < 50)
-             {
-                 <div id="result-info">
-                     <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
-                     <div class="arrow-down"></div>
-                 </div>
-             }
+            {
+                <div id="result-info">
+                    <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
+                    <div class="arrow-down"></div>
+                </div>
+            }
             <div class="results-box">
                 <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
                 <span class="subheadline">Avg price</span>
@@ -45,7 +45,9 @@ else
                 <a href="@Model.Loser.Uri" class="red-button">Show me</a>
             </div>
         }
-        
-        <p>There was no taxi route found.</p>
+        else
+        {
+            <p>There was no taxi route found.</p>
+        }
     </div>
 }
