made the taxi results page simpler

--- a/HotelOrTaxi/Views/Taxi/Index.cshtml
+++ b/HotelOrTaxi/Views/Taxi/Index.cshtml
@@ -1,10 +1,6 @@
 ﻿@model HotelOrTaxi.Models.TaxisViewModel
 
-<h2>Taxi firms near you</h2>
-<p>
-    We provide you with an <a href="http://yourtaximeter.com/main/council/manchester-district-b">average price</a> for a taxi in the district of where you want picking up.
-    
-</p>
+<h2>Taxis near you</h2>
 <p>Olympic Taxis <a href="tel:01618480963">(0161) 848 0963</a>
     
 </p>
