added the logo and changed the default text to say Your Location

--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -58,6 +58,7 @@
 
         <footer>
             <p style="line-height:60px; font-weight:700; height:0px; border-top:1px dotted #999999; color:#999999; text-align:center;">&copy; Hotel Vs Taxi @DateTime.Now.Year</p>
+            <a href="http://yourtaximeter.com/"><img src ="http://yourtaximeter.com/images/press/thumbnail/powered_by_red_thumb.png"/></a>
         </footer>
 
     </div>
