--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -15,6 +15,15 @@
         padding-top: 60px;
         padding-bottom: 40px;
       }
+
+      .footer {
+          line-height:60px; 
+          font-weight:700; 
+          height:0px; 
+          border-top:1px dotted #999999; 
+          color:#999999; 
+          text-align:center;
+      }
     </style>
     @Styles.Render("~/bundles/css")
     @RenderSection("styles", required: false)
@@ -46,7 +55,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li>@Html.ActionLink("About", "Index", "About")</li>
             </ul>
           </div>
         </div>
@@ -57,8 +66,7 @@
         @RenderBody()
 
         <footer>
-            <p style="line-height:60px; font-weight:700; height:0px; border-top:1px dotted #999999; color:#999999; text-align:center;">&copy; Hotel Vs Taxi @DateTime.Now.Year</p>
-            <a href="http://yourtaximeter.com/"><img src ="http://yourtaximeter.com/images/press/thumbnail/powered_by_red_thumb.png"/></a>
+            <div class="row"><p class="footer">&copy; Hotel Vs Taxi @DateTime.Now.Year <a href="http://yourtaximeter.com/"><img src ="http://yourtaximeter.com/images/press/thumbnail/powered_by_red_thumb.png"/></a></ptext-align:center;"></p></div>
         </footer>
 
     </div>
