--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -66,7 +66,16 @@
         @RenderBody()
 
         <footer>
-            <div class="row"><p class="footer">&copy; Hotel Vs Taxi @DateTime.Now.Year <a href="http://yourtaximeter.com/"><img src ="http://yourtaximeter.com/images/press/thumbnail/powered_by_red_thumb.png"/></a></ptext-align:center;"></p></div>
+            <div class="row">
+                <p class="footer">
+                    &copy; Hotel Vs Taxi @DateTime.Now.Year 
+                    <br />
+                    <a href="http://yourtaximeter.com/">
+                        <img src ="http://yourtaximeter.com/images/press/thumbnail/powered_by_red_thumb.png"/>
+                    </a>
+                </p>
+
+            </div>
         </footer>
 
     </div>
