--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -15,6 +15,7 @@
 else
 {
     <div class="container search-results">
+        <div class="row"><img src="/assets/img/hotel-wins.gif"/></div>
         @if (Model.Winner.Name == "Hotel" && Model.PriceDifference > 0)
         {
             <div id="result-info">
@@ -23,7 +24,7 @@ else
         }
         <div class="results-box">
             <img src="/assets/img/@Model.Winner.Name.ToLower()-wins-icon.png" width="118" height="111" alt="" />
-            <span class="subheadline">Avg price</span>
+            <span class="subheadline">@Model.Winner.SubHeadline</span>
             <span class="price">&pound; @string.Format("{0:0.00}", (double) Model.Winner.Price)</span>
             <a href="@Model.Winner.Uri" class="red-button">Show me</a>
         </div>
@@ -40,7 +41,7 @@ else
             }
             <div class="results-box">
                 <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
-                <span class="subheadline">Avg price</span>
+                <span class="subheadline">@Model.Winner.SubHeadline</span>
                 <span class="price grey">&pound; @string.Format("{0:0.00}", (double) Model.Loser.Price)</span>
                 <a href="@Model.Loser.Uri" class="red-button">Show me</a>
             </div>
