--- a/HotelOrTaxi/Views/Hotel/Index.cshtml
+++ b/HotelOrTaxi/Views/Hotel/Index.cshtml
@@ -1,48 +1,60 @@
-﻿@section styles{
+﻿@model List<LateRoomsScraper.Hotel>
+
+@section styles{
     <link href="/assets/css/searchresults.css" rel="stylesheet">
 }
 
 <div id="searchResults" class="HotelResults">
-    <a href="hotel-reservations/253902_hatters-hostel-manchester-manchester.aspx">
-	<div class="m-panel-results">
-	<div class="hotel-image">
-		<span class="inner">
-				<img alt="Picture of Hatters Hostel Manchester" src="http://static.laterooms.com/hotelphotos/laterooms/253902/gallery/hatters-hostel-manchester-manchester_020320120909093499.jpg"/>
-		</span>
-		<div class="hotel-name">
-		<div class="hotel-name-title">
-			Hatters Hostel Manchester
-		</div>
-		<div class="hotel-star-rating">
-			2h<img src="/assets/img/areas/searchresults/star-small.png" alt="Star rating"/>
-		</div>
-		<span class="hotel-address">M1 2EA, 0.6 miles from you</span>
-		</div>
-	</div>
-	<br/>
-	<div class="hotel-score">
-		<div class="hotel-score-inner">
-			<span class="rating-title">Guest Rating</span>
-			<div class="percent-score">
-				<div class="face-HighlyRated"></div>    
-				<span class="face-score">87%</span>
-			</div>
-			<strong>Based on 6<br/>Genuine Reviews</strong>
-			<br/>
-		</div>
-		<div class="arrow-price"></div>
-		<div class="hotel-price">
-	<div class="hotel-price-inner">
-	<span>
-					<span class="sr-total">Total Price from</span>
-					<br/>
-		<span class="room-price">£21.00</span>
-	</span>
-		</div>
-		</div>
-	</div>
-	<br/>
-	<br/>
-	</div>
-</a>
+@if (Model.Count > 0)
+{
+    foreach (var hotel in Model)
+    {
+        <a href="http://www.laterooms.com/en/@hotel.Url">
+            <div class="m-panel-results">
+                <div class="hotel-image">
+                    <span class="inner">
+                        <img alt="Picture of @hotel.Name" src="@hotel.ImageSource"/>
+                    </span>
+                    <div class="hotel-name">
+                        <div class="hotel-name-title">
+                            @hotel.Name
+                        </div>
+                        <div class="hotel-star-rating">
+                            @hotel.StarRating<img src="/assets/img/areas/searchresults/star-small.png" alt="Star rating"/>
+                        </div>
+                        <span class="hotel-address">@hotel.Location</span>
+                    </div>
+                </div>
+                <br/>
+                <div class="hotel-score">
+                    <div class="hotel-score-inner">
+                        <span class="rating-title">Guest Rating</span>
+                        <div class="percent-score">
+                            <div class="@hotel.Smiley"></div>    
+                            <span class="face-score">@hotel.GuestRating</span>
+                        </div>
+                        <strong>@hotel.NumberOfReviews</strong>
+                        <br/>
+                    </div>
+                    <div class="arrow-price"></div>
+                    <div class="hotel-price">
+                        <div class="hotel-price-inner">
+                            <span>
+                                <span class="sr-total">Total Price from</span>
+                                <br/>
+                                <span class="room-price">£@hotel.TotalPrice</span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <br/>
+                <br/>
+            </div>
+        </a>
+    }
+}
+else
+{   
+    <div class="row">No hotels found</div>
+}
 </div>
