deep links to mobile hotel details

--- a/HotelOrTaxi/Views/Hotel/Index.cshtml
+++ b/HotelOrTaxi/Views/Hotel/Index.cshtml
@@ -9,7 +9,7 @@
 {
     foreach (var hotel in Model)
     {
-        <a href="http://www.laterooms.com/en/@hotel.Url">
+        <a href="http://m.laterooms.com/en/p9827/@hotel.Url" target="_blank">
             <div class="m-panel-results">
                 <div class="hotel-image">
                     <span class="inner">
