--- a/HotelOrTaxi/Views/About/Index.cshtml
+++ b/HotelOrTaxi/Views/About/Index.cshtml
@@ -1,1 +1,52 @@
-﻿<h2>About Hotel vs Taxi</h2>
+﻿<h1>About</h1>
+
+<h2>Background</h2>
+
+<p>In this day and age, we are all looking to save a pound or two where ever we can and with the hotel business booming, a taxi ride home may not be the cheapest option! And even if it is, you may want to live the dream in a freshly made comfortable suite instead. Either way it can’t hurt to let our tool show you your options, so give it a go!</p>
+
+<h2>The Tool</h2>
+
+<p>Hotel vs Taxi is a new nifty little tool that tells you which option is cheaper, living it up in a nearby hotel for the night, or getting a taxi home. Each hotel displayed will be within a 1 mile radius of your current location (found by trusty GPS) so you only see the local options. All you have to do is tell us where you would need to go in a taxi and it will battle out your options to find you a winner! It is then up to you to choose your destiny, we will even help you book your choice! And Ta Dah!  Evening sorted.</p>
+
+<h2>The Team</h2>
+
+<p>12 guys and girls just looking to make a difference...or play about with computers...whichever you like...Either way we are committed to helping you get to bed for the night, whilst hopefully saving you a few pennies.</p>
+
+<h3>FAQ</h3>
+
+<h4>Where do you get your prices from? </h4>
+
+<p>Our hotel prices are fed in directly from LateRooms.com and are all live rates. In order to book any hotels listed or to look at others, you will be taken directly to the LateRooms.com website.</p>
+
+<p> Our Taxi prices come from yourtaximeter.</p>
+
+<h4>How does LateRooms.com work?</h4>
+
+<p>Hotels upload and change prices/ availability on the website 24/7. These they feed into the Hotel vs Taxi tool where you can book at any time of day. Customers wanting to book a room past 12am for the same night will need to call  directly on 0844 774 1001.</p>
+
+<h4>How does yourtaximeter work?</h4>
+
+<p>In Great Britain, the local district council set the maximum fares that taxis in that area can charge - not the taxi companies themselves. yourtaximeter collects the tariff information for nearly all districts. We will then pull in a rate for 1 person to make your selected journey and display it with great accuracy.</p>
+
+<h4>Why was the actual fare for a taxi greater than Hotel vs Taxi predicted?</h4>
+
+<ul>
+    <li>Because of any waiting time, for example at traffic lights</li>
+    <li>Because the taxi took a longer route, possibly to avoid delays at lights.</li>
+    <li>Because of other ‘extras’ eg luggage, call out charge.</li>
+    <li>Or there may be an error in the tariffs. Please let us know if you think we have them wrong .</li>
+</ul>
+
+<h4>Why was the actual fare less than Hotel vs Taxi predicted?</h4>
+
+<ul>
+    <li>Hotel vs Taxi reports the maximum fare for the distance, taxi operators may charge less. the taxi operator may not have charged for extra passengers for which he may be entitled.</li>
+    <li>Because Google maps chooses the quickest route, and your driver may have chosen the shortest route. The quickest route can be significantly longer when a motorway is used.</li>
+    <li>Or there may be an error in our tariffs. Please let us know if you think we have them wrong.</li>
+</ul>
+
+<h4>What if I want to look a future dates, for more people or refine hotel searches?</h4>
+
+<p>We are glad you like the tool enough to put it to more use! We are looking at all of these things and more. We hope to have all of these options for you very soon. For now, you can find the answer to these and many other questions at LateRooms.com or yourtaximeter.</p>
+
+<p>If you do have any further questions or queries please get in touch and send them to <a href="mailto:hello@hotelvstaxi.com">hello@hotelvstaxi.com</a> or tweet us @@hotelvstaxi</p>
