--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -1,43 +1,45 @@
-﻿@using Results
-@model HotelOrTaxi.Models.ResultsViewModel
+﻿@model HotelOrTaxi.Models.ResultsViewModel
 
-else
-{
-    <div class="container search-results">
-        <div class="row"><img src="/assets/img/hotel-wins.gif"/></div>
-        @if (Model.Winner.Name == "Hotel" && Model.PriceDifference > 0)
+<div class="container search-results">
+    <div class="row"><img src="/assets/img/hotel-wins.gif"/></div>
+    @if (Model.Winner.Name == "Hotel" && Model.PriceDifference > 0)
+    {
+        <div id="result-info">
+            <span>Hotel is &pound;@string.Format("{0:0.00}", Model.PriceDifference) cheaper</span><br/>So now you can stay – result!<div class="arrow-down"></div>
+        </div>
+    }
+    @if (Model.IsDraw)
+    {
+        <div id="result-info">
+            <span>Why not stay?!<br /> It's the same price anyway!</span>
+            <div class="arrow-down"></div>
+        </div>
+    }
+    <div class="results-box">
+        <img src="/assets/img/@Model.Winner.Name.ToLower()-wins-icon.png" width="118" height="111" alt="" />
+        <span class="subheadline">@Model.Winner.SubHeadline</span>
+        <span class="price">&pound; @string.Format("{0:0.00}", Model.Winner.Price)</span>
+        <a href="@Model.Winner.Uri" class="red-button">Show me</a>
+    </div>
+    <div class="separator"></div>
+    @if (Model.Loser != null)
+    {
+        if (Model.Loser.Name == "Hotel" && Model.PriceDifference < 50)
         {
             <div id="result-info">
-                <span>Hotel is &pound;@string.Format("{0:0.00}", (double) Model.PriceDifference) cheaper</span><br/>So now you can stay – result!<div class="arrow-down"></div>
+                <span>But a hotel is only £@(string.Format("{0:0.00}", Model.PriceDifference)) more…</span><br/>Still worth a stay?
+                <div class="arrow-down"></div>
             </div>
         }
         <div class="results-box">
-            <img src="/assets/img/@Model.Winner.Name.ToLower()-wins-icon.png" width="118" height="111" alt="" />
-            <span class="subheadline">@Model.Winner.SubHeadline</span>
-            <span class="price">&pound; @string.Format("{0:0.00}", (double) Model.Winner.Price)</span>
-            <a href="@Model.Winner.Uri" class="red-button">Show me</a>
+            <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
+            <span class="subheadline">@Model.Loser.SubHeadline</span>
+            <span class="price grey">&pound; @string.Format("{0:0.00}", Model.Loser.Price)</span>
+            <a href="@Model.Loser.Uri" class="red-button">Show me</a>
         </div>
-        <div class="separator"></div>
-        
-        @if (Model.Loser != null)
-        {
-            if (Model.Loser.Name == "Hotel" && Model.PriceDifference < 50)
-            {
-                <div id="result-info">
-                    <span>But a hotel is only £@string.Format("{0:0.00}", (double) Model.PriceDifference) more…</span><br/>Still worth a stay?
-                    <div class="arrow-down"></div>
-                </div>
-            }
-            <div class="results-box">
-                <img src="/assets/img/@Model.Loser.Name.ToLower()-icon.png" width="118" height="111" alt="" />
-                <span class="subheadline">@Model.Loser.SubHeadline</span>
-                <span class="price grey">&pound; @string.Format("{0:0.00}", (double) Model.Loser.Price)</span>
-                <a href="@Model.Loser.Uri" class="red-button">Show me</a>
-            </div>
-        }
-        else
-        {
-            <p>There was no taxi route found.</p>
-        }
-    </div>
-}
+    }
+    else
+    {
+        <p>There was no taxi route found.</p>
+    }
+</div>
