updating the pages

--- a/HotelOrTaxi/Views/Results/Error.cshtml
+++ b/HotelOrTaxi/Views/Results/Error.cshtml
@@ -7,7 +7,5 @@
             The fight got a bit messy and we have no clear winner.
             <br/>
             @Model.Error
-            <br/>
-            @Model.ErrorDetails
         </p>
-    </div>
+    </div>@*  *@
