fixing the markup for no taxis found

--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -40,6 +40,10 @@
     }
     else
     {
-        <p>There was no taxi route found.</p>
+         <div id="result-info">
+             <span>We weren't able to find you a taxi right now.</span>
+             <br/>Best get yourself checked into that hotel!
+                <div class="arrow-down"></div>
+         </div>
     }
 </div>
