Adding twitter link to about us page

--- a/HotelOrTaxi/Views/About/Index.cshtml
+++ b/HotelOrTaxi/Views/About/Index.cshtml
@@ -49,4 +49,4 @@
 
 <p>We are glad you like the tool enough to put it to more use! We are looking at all of these things and more. We hope to have all of these options for you very soon. For now, you can find the answer to these and many other questions at LateRooms.com or yourtaximeter.</p>
 
-<p>If you do have any further questions or queries please get in touch and send them to <a href="mailto:hello@hotelvstaxi.com">hello@hotelvstaxi.com</a> or tweet us @@hotelvstaxi</p>
+<p>If you do have any further questions or queries please get in touch and send them to <a href="mailto:hello@hotelvstaxi.com">hello@hotelvstaxi.com</a> or tweet us <a href="http://twitter.com/hotelvstaxi">@@hotelvstaxi</a></p>
