fixing some more issues and improving the styling

--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -40,10 +40,8 @@
     }
     else
     {
-         <div id="result-info">
-             <span>We weren't able to find you a taxi right now.</span>
-             <br/>Best get yourself checked into that hotel!
-                <div class="arrow-down"></div>
-         </div>
+        <div id="result-info">
+            <span>We weren't able to find you a taxi right now.</span><br/>Best get yourself checked into that hotel!
+        </div>
     }
 </div>
