--- a/HotelOrTaxi/Views/About/Index.cshtml
+++ b/HotelOrTaxi/Views/About/Index.cshtml
@@ -50,3 +50,29 @@
 <p>We are glad you like the tool enough to put it to more use! We are looking at all of these things and more. We hope to have all of these options for you very soon. For now, you can find the answer to these and many other questions at LateRooms.com or yourtaximeter.</p>
 
 <p>If you do have any further questions or queries please get in touch and send them to <a href="mailto:hello@hotelvstaxi.com">hello@hotelvstaxi.com</a> or tweet us <a href="http://twitter.com/hotelvstaxi">@@hotelvstaxi</a></p>
+
+<div class="separator"></div>
+
+<h1>Terms & Conditions</h1>
+
+<h2>Terms of Use</h2>
+
+<p>Use of Hotel Vs Taxi is subject to the below terms and conditions:</p>
+
+<h3>Taxi Prices</h3>
+
+<p>The taxi rates shown on HotelvsTaxi are provided by YourTaximeter.com, a free online service that tells you exactly how much your taxi will cost before you get in it. The calculations are based on the fares set by the councils across the UK, taking every aspect of the tariff information into account: date, time, and based on an average fare for 1 passenger.</p>
+
+<p>The fare calculator has proved to be so accurate that many taxi companies now use it when quoting prices for customers, however, please bear in mind that the taxi prices shown on Hotel Vs Taxi are calculated estimates only, based on information provided by local authorities in the United Kingdom via yourtaximeter.com. Whilst we try to make sure all information is correct and up to date we cannot guarantee its accuracy, so please be sure to get your own quote from the taxi company before booking your journey.</p>
+
+<p>All routes are calculated using Google Maps. We have no affiliation with Google.</p>
+
+<p>Hotel Vs Taxi accepts no liability for any incorrect taxi fares or personal decisions based on using the site.</p>
+
+<h3>Hotel Prices</h3>
+
+<p>All hotel prices shown are retrieved from LateRooms.com and as such are bound by the terms and conditions found at <a href="http://www.laterooms.com" target="_blank">LateRooms.com</a>.</p>
+
+<h3>Third party terms and conditions</h3>
+
+<p>HotelvsTaxi makes use of information from YourTaxiMeter.com when calculating the maximum estimated fare. As such, users of HotelvsTaxi.com are also subject to the YourTaxiMeter.com  general <a href="http://yourtaximeter.com/main/disclaimer" target="_blank">Terms of Use, Privacy Policy and Disclaimer</a>.</p>
