improved the user experience for us not being able to find the loser

--- a/HotelOrTaxi/Views/Results/Index.cshtml
+++ b/HotelOrTaxi/Views/Results/Index.cshtml
@@ -41,7 +41,7 @@
     else
     {
         <div id="result-info">
-            <span>We weren't able to find you a taxi right now.</span><br/>Best get yourself checked into that hotel!
+            <span>@Model.LoserText</span>
         </div>
     }
 </div>
