added the error details to comments on the error page

--- a/HotelOrTaxi/Views/Results/Error.cshtml
+++ b/HotelOrTaxi/Views/Results/Error.cshtml
@@ -6,6 +6,7 @@
         <p>
             The fight got a bit messy and we have no clear winner.
             <br/>
-            @Model.Error
+            <!-- @Model.Error.Message -->
+            <!-- @Model.Error.StackTrace-->
         </p>
     </div>
