adding some stuff for the local search and some funky stuff on the from field to delete the text if you click on it. Andy, please don't shout at me.

--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="span5">
                 <div class="control-group">
-                    <input type="text" id="from" placeholder="From" class="input-block-level" name="From" value="Your location">
+                    <input type="text" id="from" placeholder="From" class="input-block-level" name="From" value="Your location" onfocus="if(this.value == 'Your location') {this.value=''}" onblur="if(this.value == ''){this.value ='Your location'}">
                 </div>
             </div>
             <div class="span5">
