--- a/HotelOrTaxi/assets/css/style-2.css
+++ b/HotelOrTaxi/assets/css/style-2.css
@@ -15,10 +15,6 @@ body, input, button, select, textarea { font-family: 'Open Sans', sans-serif; }
     min-height: 50px;
 }
 
-.hero-unit {
-    background-color: red;
-}
-
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
     border-radius: 4px 4px 4px 4px;
     color: #555555;
@@ -43,23 +39,13 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
     margin-bottom: 60px;
   }
  }
-@media (max-width: 768px) {
-.navbar-fixed-top {
-    margin-bottom:0;
+@media (max-width: 768px)
+{
+    .navbar-fixed-top
+    {
+        margin-bottom: 0;
+    }
 }
-
-.hero-unit {
-  border-radius: 0px;
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  margin-left:-20px;
-
- }
- 
- 
-}
-
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -85,24 +71,7 @@ input[type="color"]:focus,
      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
-
-.btn:first-child {
-}
-button.btn, input.btn[type="submit"] {
-}
-.btn-fight {
-	height:82px;
-	width:287px;
-    cursor: pointer;
-    display: inline-block;
-	background:url(/assets/img/fight-button.png);
-    vertical-align: middle;
-	border:none;
-	text-align:center;
-	margin:0 auto;
-	}
 	
- 
  .control-group {
 	 text-align:center;
  }
