--- a/HotelOrTaxi/assets/css/style-3.css
+++ b/HotelOrTaxi/assets/css/style-3.css
@@ -101,7 +101,13 @@ body, input, button, select, textarea { font-family: 'Open Sans', sans-serif; }
     min-height: 50px;
 }
 
+.navbar .nav > li {
+    line-height:30px;
+}
+
 .hero-unit {
+    padding:20px;
+    margin-bottom:0px;
     background-color: red;
 }
 
@@ -137,15 +143,6 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 .navbar-fixed-top {
     margin-bottom:0;
 }
-
-.hero-unit {
-  border-radius: 0px;
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  margin-left:-20px;
-
- }
   
 /*888888*/
 
@@ -216,7 +213,6 @@ button.btn, input.btn[type="submit"] {
 	text-align:center;
 	margin:0 auto;
 	}
-	
  
  .control-group {
 	 text-align:center;
@@ -233,11 +229,6 @@ form {
 .steps-numbers p { font-style:italic; }
 
 /* PROMOTION HEADER - NEEDS CHANGING */
-#headerIMG {
-	height:149px;
-	width:320px;
-	margin:0 auto;
-}
 
 .photo-set1 { background-image:url(/assets/img/people/abi.png); }
 .photo-set2 { background-image:url(/assets/img/people/adam.png); }
@@ -285,4 +276,142 @@ html {
     background-color: #810026;
     color: #FFFFFF;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+}
+
+.arrow-down-bottom
+{
+    width: 100%;
+    height: 40px;
+}
+.arrow-down-bottom-img
+{
+    background: url("../../../assets/img/arrow-down.png") no-repeat 0 0;
+    height: 20px;
+    margin: 0 auto;
+    width: 49px;
+}
+
+
+@media (min-width: 1200px){
+	.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
+	width: 940px;
+	}
+
+    .hero-unit {
+      float: left;
+      width: 470px;
+    }
+
+    .arrow-down-bottom {
+        display:none;
+    }
+}
+
+@media (max-width: 979px){
+	.navbar-fixed-top {
+	  margin-bottom:0px;
+	}
+
+}
+footer {
+	clear:both;
+}
+
+/* OVERWRITE bootstrap-responsive.css */
+
+#sublogo {
+    background: url("../../../assets/img/bubbles-hotel-vs-taxi.png") no-repeat scroll right center transparent;
+    margin: 15px 0;
+    width: 520px;
+}
+
+#sublogo h1 {
+    margin: 0;
+    padding: 0;
+}
+
+ #moreinfo { 
+	float:left;
+	width:380px;
+	margin-left:50px;
+	margin-top:50px;
+ }
+ 
+ .citation {
+	width:290px;
+	margin-left:10px;
+ }
+ 
+ #content { 
+    padding:20px 0 0;
+	clear:both;
+	text-align:center;
+ }
+ 
+.navbar-inner {
+	 padding:0;
+}
+
+.headerIMG {
+	margin:0 auto;
+}
+ 
+ 
+@media (max-width: 710px) {
+ 
+  #logo { display:block }
+  #sublogo, .citation  { display:none }
+  .hero-unit{ width:100%; }
+	 
+  #moreinfo { 
+	  clear:both;
+	  float:none;
+	  margin:0 auto;
+	  font-size:1.2em;
+  }
+  
+  #moreinfo {
+	width:360px;
+  }
+  
+}
+ 
+@media (max-width: 979px) and (min-width: 710px){
+
+	#moreinfo {  
+	  clear:both;
+	  float:none;
+	  margin:0 auto; 
+	  font-size:1.2em;
+	}
+
+	.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container, #sublogo {
+		width: 620px;
+	}
+	
+    .span5, .hero-unit {
+		width: 580px;
+	}
+	
+
+	.hero-unit {
+		-webkit-border-radius: 6px;
+		-moz-border-radius: 6px;
+		border-radius: 6px;
+	}
+	
+	 
+	.citation {
+		display:none;
+	}
+	
+}
+
+@media (max-width: 1199px) and (min-width: 980px){
+    
+   .hero-unit {
+	width:470px;
+	float:left;
+   }
+	.span5 { width: 470px;  }
 }
