updated logo url

--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -67,7 +67,11 @@
 
     <div class="container">
         <div id="sublogo">
-			<h1><a class="brand" href="./page_files/page.htm"><img src="assets/img/hotel-vs-taxi-bigger-logo.png" alt="Hotel vs Taxis" /></a></h1>
+            <h1>
+                <a class="brand" href="/">
+                    <img src="assets/img/hotel-vs-taxi-bigger-logo.png" alt="Hotel vs Taxis" />
+                </a>
+            </h1>
 		</div>
         @RenderBody()
 
