moved location.js to be used only on homepage

--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -47,7 +47,8 @@
 </div>
 
 @section Scripts {
-      <!-- Randomly generate pics -->
+    <!-- Randomly generate pics -->
+    <script type="text/javascript" src="/assets/js/location.js"></script>
     <script type="text/javascript">
     $(document).ready(function(){
         var rand_no = Math.floor((13-1)*Math.random()) + 1;
