--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
       .footer {
           line-height:60px; 
           font-weight:700; 
-          height:0px; 
+          height:0; 
           border-top:1px dotted #999999; 
           color:#999999; 
           text-align:center;
@@ -69,7 +69,7 @@
         <div id="sublogo">
             <h1>
                 <a class="brand" href="/">
-                    <img src="assets/img/hotel-vs-taxi-bigger-logo.png" alt="Hotel vs Taxis" />
+                    <img src="/assets/img/hotel-vs-taxi-bigger-logo.png" alt="Hotel vs Taxis" />
                 </a>
             </h1>
 		</div>
