--- a/HotelOrTaxi/Views/Shared/_Layout.cshtml
+++ b/HotelOrTaxi/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link href="/assets/css/bootstrap-overide.css" rel="stylesheet">
     <link rel="apple-touch-icon" href="/assets/img/icon-app.png"/>
     <link rel="apple-touch-startup-image" href="/assets/img/startscreen.png" />
+    <link rel="icon" href="/favicon.ico">
     <style type="text/css">
       body {
         padding-top: 60px;
