--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -4,7 +4,11 @@
         <div class="row">
             <div class="span5">
                 <div class="control-group">
-                    <input type="text" id="from" placeholder="From" class="input-block-level" name="From" value="Current location" onfocus="if(this.value == 'Current location') {this.value=''}" onblur="if(this.value == ''){this.value ='Current Location'}">
+                    <div class="search-box-holder">
+                        <input type="text" id="from" placeholder="From" class="input-block-level" name="From" value="Current location" onfocus="if(this.value == 'Current location') {this.value=''}" onblur="if(this.value == ''){this.value ='Current Location'}">
+                        <button id="change-location" type="submit" value="change">Change</button>
+                        <div id="find-my-loc"></div>
+                    </div>
                 </div>
             </div>
             <div class="span5">
