wiring up the real taxi info functionality

--- a/HotelOrTaxi/Views/About/Index.cshtml
+++ b/HotelOrTaxi/Views/About/Index.cshtml
@@ -22,7 +22,7 @@
 
 <h4>How does LateRooms.com work?</h4>
 
-<p>Hotels upload and change prices/ availability on the website 24/7. These they feed into the Hotel vs Taxi tool where you can book at any time of day. Customers wanting to book a room past 12am for the same night will need to call  directly on 0844 774 1001.</p>
+<p>Hotels upload and change prices/ availability on the website 24/7. These they feed into the Hotel vs Taxi tool where you can book at any time of day. Customers wanting to book a room past 12am for the same night will need to call  directly on <a href ="tel:0844 774 1001">0844 774 1001</a>.</p>
 
 <h4>How does yourtaximeter work?</h4>
 
