testing viewport fix and css amend

--- a/HotelOrTaxi/Views/Home/Index.cshtml
+++ b/HotelOrTaxi/Views/Home/Index.cshtml
@@ -35,12 +35,11 @@
 <div id="moreinfo">
     <div style=" height:100px;" class="steps-numbers">
         <img style="float:left;" src="/assets/img/circle-1.png" alt="1" />
-        <p style=" padding-top:10px; vertical-align:baseline; float:left; width:240px; padding-left:20px;">      Tell us where you are and where you’re heading
-        </p>
+        <p class="one">Tell us where you are and where you’re heading</p>
     </div>
     <div style=" height:100px;"  class="steps-numbers">
         <img style="float:right;" src="/assets/img/circle-2.png" alt="1" />
-        <p style="padding-right:20px; width:240px; padding-left:20px; text-align:right;">    We’ll pit local hotel deals against your taxi fare to find the best option
+        <p class="two">    We’ll pit local hotel deals against your taxi fare to find the best option
         </p>
     </div>
 </div>
